@@ -10,6 +10,10 @@ module Devise
     # For HTTP, you can pass the token as username and blank password. Since some clients may require
     # a password, you can pass "X" as password and it will simply be ignored.
     class TokenAuthenticatable < Authenticatable
+      def store?
+        !mapping.to.stateless_token
+      end
+
       def authenticate!
         resource = mapping.to.find_for_token_authentication(authentication_hash)
 
